<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_txt_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:maxLength="100"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_input_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_txt_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/note"
                    android:lineSpacingMultiplier="1.3"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:translationY="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_tick_icon" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>