...
            android:id="@+id/note_base_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{note.title}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop"
                tools:text="Note title" />

            <TextView
                android:id="@+id/note_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{AppExtnFuncsKt.ellipsisText(note.content)}"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_title"
...
